--- a/public/app/themes/studio/assets/styles/application.scss
+++ b/public/app/themes/studio/assets/styles/application.scss
@@ -7,7 +7,7 @@
 @import "components/slickslider";
 
 @import "blocks/header";
-@import "blocks/_hover";
+@import "blocks/general";
 @import "blocks/social";
 @import "blocks/amenity";
 @import "blocks/location";
