--- a/public/app/themes/studio/views/pages/location.twig
+++ b/public/app/themes/studio/views/pages/location.twig
@@ -76,49 +76,49 @@
 					</div>
 				</div>
 			</section>
-			<section class="block-hover">
+			<section class="block-general">
 				<div class="row">
 					<div class="col-md-8">
 						<header>
-							<h2 class="block-life__title">AREA VIEWS</h2>
+							<h2 class="block-general__title">AREA VIEWS</h2>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad.
 							</p>
 						</header>
 					</div>
 				</div>
 				<div class="row">
-					<div class="block-hover__item col-sm-6">
-						<div class="block-hover__item__thumb">
-							<img src="{{theme.link}}/assets/images/amen3.jpg" class="img-responsive">
+					<div class="block-general__item col-sm-6">
+						<div class="block-general__item__thumb">
+							<img src="{{theme.link}}/assets/images/amen3.jpg" class="w-100">
 						</div>
-						<div class="block-hover__item__detail">
+						<div class="block-general__item__detail">
 							<p>Lorem ipsum dolor sit amet conse ctetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
 						</div>
 					</div>
 
-					<div class="block-hover__item col-sm-6">
-						<div class="block-hover__item__thumb">
-							<img src="{{theme.link}}/assets/images/amen2.png" class="img-responsive">
+					<div class="block-general__item col-sm-6">
+						<div class="block-general__item__thumb">
+							<img src="{{theme.link}}/assets/images/amen2.png" class="w-100">
 						</div>
-						<div class="block-hover__item__detail">
+						<div class="block-general__item__detail">
 							<p>Lorem ipsum dolor sit amet conse ctetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
 						</div>
 					</div>
 
-					<div class="block-hover__item col-sm-6">
-						<div class="block-hover__item__thumb">
-							<img src="{{theme.link}}/assets/images/amen1.jpg" class="img-responsive">
+					<div class="block-general__item col-sm-6">
+						<div class="block-general__item__thumb">
+							<img src="{{theme.link}}/assets/images/amen1.jpg" class="w-100">
 						</div>
-						<div class="block-hover__item__detail">
+						<div class="block-general__item__detail">
 							<p>Lorem ipsum dolor sit amet conse ctetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
 						</div>
 					</div>
 
-					<div class="block-hover__item col-sm-6">
-						<div class="block-hover__item__thumb">
-							<img src="{{theme.link}}/assets/images/amen3.jpg" class="img-responsive">
+					<div class="block-general__item col-sm-6">
+						<div class="block-general__item__thumb">
+							<img src="{{theme.link}}/assets/images/amen3.jpg" class="w-100">
 						</div>
-						<div class="block-hover__item__detail">
+						<div class="block-general__item__detail">
 							<p>Lorem ipsum dolor sit amet conse ctetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
 						</div>
 					</div>
