--- a/public/app/themes/studio/views/content-blocks/contact_us.twig
+++ b/public/app/themes/studio/views/content-blocks/contact_us.twig
@@ -1,3 +1,3 @@
-<div id="{{ content.acf_fc_layout }}" class="">
+<div id="{{ content.acf_fc_layout ~ '-' ~ loop.index }}" class="">
 	{{ dump(content) }}
 </div>
