--- a/public/app/themes/studio/views/pages/locations.twig
+++ b/public/app/themes/studio/views/pages/locations.twig
@@ -1,23 +1,88 @@
 {% extends "layouts/master.twig" %}
 
 {% block content %}
-	<ul>
-		{% for location_category in locations %}
-		<li class="category category-{{ location_category.location_category_name|lower|replace({' ': '_'}) }}">
-			<a data-category="{{ location_category.location_category_id }}" href="#">{{ location_category.location_category_name }}</a>
-		</li>
-		{% endfor %}
-	</ul>
+	<main class="main-content">
+		<div class="container">
+			<section class="block-location">
+				<div class="row">
+					<div class="col-md-7">
+						<div id="map-area" style="height: 500px;"></div>
+					</div>
+					<div class="col-md-5 block-location__detail">
+						<div class="block-location__icon">
+							<ul>
+								{% for location_category in locations %}
+								<li class="category category-{{ location_category.location_category_name|lower|replace({' ': '_'}) }}">
+									<a data-category="{{ location_category.location_category_id }}" href="#">
+										{{get_svg_icon('icon-1', '0 0 16.4 16.17')}}
+									</a>
+								</li>
+								{% endfor %}
+							</ul>
+						</div>
+						<div class="block-location__list">
+							{% for location_category in locations %}
+							<div class="neighborhood-list-wrap" id="{{ 'content' ~ location_category.location_category_id }}">
+								<ul class="neighborhood-list" id="{{ 'results' ~ location_category.location_category_id }}">
+									{# locations get dumped into here #}
+								</ul>
+							</div>
+							{% endfor %}
+						</div>
+					</div>
+				</div>
+			</section>
 
-	{% for location_category in locations %}
-	<div class="neighborhood-list-wrap" id="{{ 'content' ~ location_category.location_category_id }}">
-		<ul class="neighborhood-list" id="{{ 'results' ~ location_category.location_category_id }}">
-			{# locations get dumped into here #}
-		</ul>
-	</div>
-	{% endfor %}
+			<section class="block-general">
+				<div class="row">
+					<div class="col-md-8">
+						<header>
+							<h2 class="block-general__title">AREA VIEWS</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad.
+							</p>
+						</header>
+					</div>
+				</div>
+				<div class="row">
+					<div class="block-general__item col-sm-6">
+						<div class="block-general__item__thumb">
+							<img src="{{theme.link}}/assets/images/amen3.jpg" class="w-100">
+						</div>
+						<div class="block-general__item__detail">
+							<p>Lorem ipsum dolor sit amet conse ctetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
+						</div>
+					</div>
 
-	<div id="map-area" style="height: 500px;"></div>
+					<div class="block-general__item col-sm-6">
+						<div class="block-general__item__thumb">
+							<img src="{{theme.link}}/assets/images/amen2.png" class="w-100">
+						</div>
+						<div class="block-general__item__detail">
+							<p>Lorem ipsum dolor sit amet conse ctetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
+						</div>
+					</div>
+
+					<div class="block-general__item col-sm-6">
+						<div class="block-general__item__thumb">
+							<img src="{{theme.link}}/assets/images/amen1.jpg" class="w-100">
+						</div>
+						<div class="block-general__item__detail">
+							<p>Lorem ipsum dolor sit amet conse ctetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
+						</div>
+					</div>
+
+					<div class="block-general__item col-sm-6">
+						<div class="block-general__item__thumb">
+							<img src="{{theme.link}}/assets/images/amen3.jpg" class="w-100">
+						</div>
+						<div class="block-general__item__detail">
+							<p>Lorem ipsum dolor sit amet conse ctetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+		</div>
+	</main>
 {% endblock %}
 
 {% block body_js %}
