--- a/public/app/themes/studio/assets/styles/application.scss
+++ b/public/app/themes/studio/assets/styles/application.scss
@@ -13,6 +13,8 @@
 @import "blocks/location";
 @import "blocks/contact-us";
 @import "blocks/get-directions";
+@import "blocks/floorplans";
+@import "blocks/floorplan-detail";
 
 
 @import "blocks/footer";
