--- a/public/app/themes/studio/assets/styles/blocks/_contact-us.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_contact-us.scss
@@ -108,6 +108,7 @@
 				.select2-container--default{
 					text-transform: uppercase;
 					padding:0;
+					width: 100%!important;
 					.select2-selection--single{
 						border: none;
 						.select2-selection__rendered{
