--- a/public/app/themes/studio/views/pages/floorplans.twig
+++ b/public/app/themes/studio/views/pages/floorplans.twig
@@ -1,5 +1,9 @@
 {% extends "layouts/master.twig" %}
 
+{% block header %}
+      {% include 'partials/header-floorplan.twig' %}
+{% endblock %}
+
 {% block content %}
 	<div id="fp-filters">
 		<ul id="fp-filters--bedrooms">
