--- a/public/app/themes/studio/assets/styles/blocks/_amenity.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_amenity.scss
@@ -16,14 +16,38 @@
 			background-color: $gray-bg-color;
 
 			> .row {
-				@media screen and (min-width: 992px) {
+				@include breakpoint(tablet) {
 					display: flex;
+
+					&>* {
+						position: relative;
+					}
 				}
 			}
 		}
 
 		&__list {
-			padding: 60px 30px 30px;
+			padding: 30px 15px 20px;
+			@include breakpoint(tablet) {
+				padding: 0 30px;
+				position: absolute;
+				left: 15px;
+				right: 15px;
+				top: 60px;
+				bottom: 30px;
+				overflow: hidden;
+
+				ul {
+					position: absolute;
+					top: 0;
+					left: 30px;
+					right: 30px;
+				}
+			}
 		}
 	}
+}
+
+.slick-slide img {
+	display: inline-block;
 }
