--- a/public/app/themes/studio/views/content-blocks/amenities.twig
+++ b/public/app/themes/studio/views/content-blocks/amenities.twig
@@ -33,6 +33,7 @@
 						</ul>
 					</div>
 					{% endif %}
+					<div class="slider-scroll" data-scroll-target="img-banner" class="hidden-xs" style="height: 200px;"></div>
 				</div>
 			</div>
 		</div>
