--- a/public/app/themes/studio/assets/styles/application.scss
+++ b/public/app/themes/studio/assets/styles/application.scss
@@ -5,6 +5,7 @@
 
 @import "components/list";
 @import "components/slickslider";
+@import "components/noUI";
 
 @import "blocks/header";
 @import "blocks/general";
