--- a/public/app/themes/studio/views/content-blocks/amenities.twig
+++ b/public/app/themes/studio/views/content-blocks/amenities.twig
@@ -34,7 +34,7 @@
 					</div>
 					{% endif %}
 					<div class="wrap-scroll wrap-vertical" data-scroll>
-						<div class="slider-scroll" class="hidden-xs"></div>
+						<div class="slider-scroll" class="hidden-xs hidden-sm"></div>
 					</div>
 				</div>
 			</div>
