--- a/public/app/themes/studio/views/content-blocks/gallery.twig
+++ b/public/app/themes/studio/views/content-blocks/gallery.twig
@@ -11,10 +11,15 @@
 		<div class="block-amenity__item__detail">
 			{% if content.gallery %}
 			<div class="block-amenity__item__gallery">
-				<div class="gallery-slider">
+				<div class="gallery-slider slider-fix-h">
 					{% for image in content.gallery %}
-					<div>
-						<img src="{{ Image(image).src }}" class="w-100" alt="{{ image.alt }}">
+					<div style="height: 450px;" class="is-scroll-image">
+						<div data-content-image>
+							<img src="{{ Image(image).src|resize(1920) }}" alt="{{ image.alt }}">
+						</div>
+						<div class="wrap-scroll wrap-vertical" data-scroll-image>
+							<div class="slider-scroll-image"></div>
+						</div>
 					</div>
 					{% endfor %}
 				</div>
