--- a/public/app/themes/studio/views/errors/404.twig
+++ b/public/app/themes/studio/views/errors/404.twig
@@ -1,5 +1,12 @@
 {% extends "layouts/master.twig" %}
 
+{% block header %}
+      {% include 'partials/header-404.twig' %}
+{% endblock %}
+
 {% block content %}
-	Sorry, we couldn't find what you're looking for.
+	<main class="main-content">
+		<div class="container" style="height: 40px;">
+		</div>
+	</main>
 {% endblock %}
