--- a/public/app/themes/studio/views/partials/header-bottom.twig
+++ b/public/app/themes/studio/views/partials/header-bottom.twig
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-10 col-sm-offset1">
-                <h1>{{ post.post_title }}</h1>
+                <h1 class="text-uppercase">{{ post.post_title }}</h1>
                 <p>{{ post.get_field('pgs_excerpt') }}</p>
 
                 {% set contentblock = post.get_field('pgs_content_block') %}
@@ -11,7 +11,7 @@
                 {% if chkcontentblock or customlinks %}
                 <ul class="list-default text-uppercase">
                     {% for custom in customlinks %}
-                    <li><a href="{{ custom.link }}" class="scroll-content-block">{{ custom.text }}</a></li>
+                    <li><a href="{{ custom.link }}" class="scroll-content-block" target="_blank">{{ custom.text }}</a></li>
                     {% endfor %}
 
                     {% for content in contentblock %}
