--- a/public/app/themes/studio/assets/styles/blocks/_general.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_general.scss
@@ -95,3 +95,19 @@
 		}
 	}
 }
+
+.page-template-locations {
+	.block-general {
+		padding-top: 0;
+
+		header {
+			.block-general__title {
+				font-size: 36px;
+			}
+
+			p {
+				font-size: 14px;
+			}
+		}
+	}
+}
