--- a/public/app/themes/studio/assets/styles/blocks/_location.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_location.scss
@@ -4,7 +4,9 @@
 	background-color: $gray-bg-color;
 
 	> .row {
-		display: flex;
+		@media screen and (min-width: 992px) {
+			display: flex;
+		}
 	}
 
 	&__detail {
@@ -18,6 +20,11 @@
 
 		ul {
 			list-style: none;
+			padding-left: 10px;
+
+			@media screen and (min-width: 992px) {
+				padding-left: 30px;
+			}
 
 			li {
 				padding: 30px 0;
@@ -78,7 +85,6 @@
 		position: relative;
 		width: 100%;
 		height: auto;
-		padding: 45px 0;
 
 		ul {
 			list-style: none;
@@ -111,15 +117,20 @@
 
 		.wrap-absolute {
 			position: absolute;
-			top: 0;
+			top: 45px;
 			left: 0;
-			bottom: 0;
+			bottom: 45px;
 			right: 0;
 			overflow: hidden;
 
 			ul {
 				position: absolute;
 				top: 0;
+				padding-left: 5px;
+
+				@media screen and (min-width: 992px) {
+					padding-left: 30px;
+				}
 			}
 		}
 	}
