--- a/public/app/themes/studio/assets/styles/components/_noUI.scss
+++ b/public/app/themes/studio/assets/styles/components/_noUI.scss
@@ -1,10 +1,14 @@
 .wrap-vertical {
 	position: absolute;
 	height: 100%!important;
-	width: 54px;
+	width: 35px;
 	top: 0;
-	right: 15px;
+	right: 0;
 	background-color: $main-color;
+
+	@media screen and (min-width: 992px) {
+		width: 54px;
+	}
 
 	.noUi-vertical {
 		width: 1px;
