--- a/public/app/themes/studio/assets/styles/_global.scss
+++ b/public/app/themes/studio/assets/styles/_global.scss
@@ -166,12 +166,17 @@ a {
 // is-scroll-image
 .is-scroll-image {
     position: relative;
-    *[data-scroll-image] {
-        right: 0;
-    }
     *[data-content-image] {
         height: 100%;
         width: 100%;
         overflow: hidden;
+    }
+}
+
+.wrap-vertical {
+    .is-scroll-image {
+        *[data-scroll-image] {
+            right: 0;
+        }
     }
 }
