--- a/public/app/themes/studio/assets/styles/blocks/_header.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_header.scss
@@ -59,6 +59,14 @@
 			}
 		}
 	}
+
+	&--floorplan {
+		.block-header {
+			&__thumb {
+				max-height: 320px;
+			}
+		}
+	}
 }
 
 #slider-vertical {
