--- a/public/app/themes/studio/assets/styles/components/_list.scss
+++ b/public/app/themes/studio/assets/styles/components/_list.scss
@@ -4,6 +4,10 @@
 	li {
 		position: relative;
 
+		&:hover {
+			opacity: 0.35;
+		}
+
 		&:before {
 			content: "";
 			position: absolute;
@@ -17,6 +21,7 @@
 
 		a {
 			color: $black;
+			@include transition(all 0.3s ease);
 		}
 	}
 }
