--- a/public/app/themes/studio/assets/styles/_global.scss
+++ b/public/app/themes/studio/assets/styles/_global.scss
@@ -18,6 +18,9 @@ a {
     &:hover, &:active, &:focus {
         text-decoration: none;
     }
+    &:hover {
+        color: $main-color;
+    }
 }
 
 .ieblock {
