--- a/public/app/themes/studio/assets/styles/blocks/_social.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_social.scss
@@ -6,6 +6,7 @@
 		display: inline-block;
 		vertical-align: middle;
 		background-color: $luxor-gold;
+		@include transition(all .3s ease-in-out);
 
 		+li {
 			margin-left: 5px;
@@ -18,6 +19,10 @@
 			line-height: 30px;
 			display: block;
 			text-align: center;
+		}
+
+		&:hover {
+			background-color: $main-color;
 		}
 	}
 }
