--- a/public/app/themes/studio/views/partials/footer.twig
+++ b/public/app/themes/studio/views/partials/footer.twig
@@ -13,10 +13,10 @@
             </div>
             <div class="col-sm-8">
                 <div class="list-icons text-right">
-                    <a href="{{icons_link_ft[0]['icon_1']}}">{{get_svg_icon('icon-1', '0 0 16.4 16.17')}}</a>
-                    <a href="{{icons_link_ft[0]['icon_2']}}">{{get_svg_icon('icon-2', '0 0 15.72 15.17')}}</a>
-                    <a href="{{icons_link_ft[0]['icon_3']}}">{{get_svg_icon('icon-3', '0 0 14.87 16.85')}}</a>
-                    <a href="{{icons_link_ft[0]['icon_4']}}">{{get_svg_icon('icon-4', '0 0 16.11 16.15')}}</a>
+                    <span>{{get_svg_icon('icon-1', '0 0 16.4 16.17')}}</span>
+                    <span>{{get_svg_icon('icon-2', '0 0 15.72 15.17')}}</span>
+                    <span>{{get_svg_icon('icon-3', '0 0 14.87 16.85')}}</span>
+                    <span>{{get_svg_icon('icon-4', '0 0 16.11 16.15')}}</span>
                 </div>
                 <p class="block-ft__copyright text-right">{{global.copy_right_text}}</p>
             </div>
